objects/copado__Selenium_Test_Case__c.object
<CustomObject>
    <fields>
        <fullName>copado__Open_with_Copado_Recorder__c</fullName>
        <description>Open with Copado Recorder</description>
        <formula>HYPERLINK(&quot;copado:selenese/&quot;&amp;Id, &quot;Open&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Open with Copado Recorder</inlineHelpText>
        <label>Open with Copado Recorder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Previous_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Version</label>
        <referenceTo>copado__Selenium_Test_Case__c</referenceTo>
        <relationshipLabel>Next Version</relationshipLabel>
        <relationshipName>Selenium_Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Version__c</fullName>
        <defaultValue>&quot;1&quot;</defaultValue>
        <label>Version</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Selenium Test Case</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Version__c</columns>
        <columns>copado__Open_with_Copado_Recorder__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>copado__Previous_Version__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Selenium Test Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selenium Test Cases</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>